--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "mern eccom app",
   "main": "server.js",
+  "engines": {
+    "node": "14.13.0",
+    "npm": "6.14.8"
+  },
   "type": "module",
   "scripts": {
     "start": "node backend/server",
